# NoROSLib

./: .gitignore  LICENSE  README.md
.github/workflows/: pypi.yml
cpp/: CMakeLists.txt  DEPENDENCIES.md  README.md  irap_noroslib_impl.cpp  noros_impl.cpp
cpp/dev/include/irap_noroslib/: actionlib.hpp  actionlib_msgs.hpp  bag.hpp  diagnostic_msgs.hpp  dynamic_actionlib.hpp  dynamic_node.hpp  dynmsg.hpp  geometry_msgs.hpp  irap_noroslib.hpp  md5calc.h  message.hpp  msgfile.hpp  nav_msgs.hpp  net_util.hpp  node.hpp  platform.hpp  sensor_msgs.hpp  std_msgs.hpp  std_srvs.hpp  tcpros.hpp  trajectory_msgs.hpp  udpros.hpp  xmlrpc.hpp  xmlrpc_client.hpp  xmlrpc_server.hpp
cpp/dev/include/irap_noroslib/actionlib_msgs/: GoalID.h  GoalStatus.h  GoalStatusArray.h
cpp/dev/include/irap_noroslib/diagnostic_msgs/: DiagnosticArray.h  DiagnosticStatus.h  KeyValue.h
cpp/dev/include/irap_noroslib/geometry_msgs/: Accel.h  Point.h  Point32.h  Polygon.h  Pose.h  PoseArray.h  PoseStamped.h  PoseWithCovariance.h  Quaternion.h  Transform.h  TransformStamped.h  Twist.h  TwistStamped.h  TwistWithCovariance.h  Vector3.h  Wrench.h
cpp/dev/include/irap_noroslib/nav_msgs/: GridCells.h  MapMetaData.h  OccupancyGrid.h  Odometry.h  Path.h
cpp/dev/include/irap_noroslib/sensor_msgs/: CameraInfo.h  CompressedImage.h  Image.h  Imu.h  JointState.h  LaserScan.h  MagneticField.h  NavSatFix.h  NavSatStatus.h  PointCloud2.h  PointField.h  Range.h  RegionOfInterest.h  Temperature.h
cpp/dev/include/irap_noroslib/std_msgs/: Bool.h  Byte.h  Char.h  ColorRGBA.h  Duration.h  Empty.h  Float32.h  Float64.h  Header.h  Int16.h  Int32.h  Int64.h  Int8.h  String.h  Time.h  UInt16.h  UInt32.h  UInt64.h  UInt8.h
cpp/dev/include/irap_noroslib/std_srvs/: Empty.h  SetBool.h  Trigger.h
cpp/dev/include/irap_noroslib/trajectory_msgs/: JointTrajectory.h  JointTrajectoryPoint.h  MultiDOFJointTrajectory.h  MultiDOFJointTrajectoryPoint.h
cpp/dev/include/noros/: actionlib.hpp  actionlib_msgs.hpp  diagnostic_msgs.hpp  geometry_msgs.hpp  message.hpp  nav_msgs.hpp  net_util.hpp  node.hpp  noros.hpp  platform.hpp  sensor_msgs.hpp  std_msgs.hpp  std_srvs.hpp  tcpros.hpp  trajectory_msgs.hpp  udpros.hpp  xmlrpc.hpp  xmlrpc_client.hpp  xmlrpc_server.hpp
cpp/dev/src/: bag.cpp  dynmsg.cpp  msgfile.cpp  net_util.cpp  node.cpp  tcpros.cpp  udpros.cpp  xmlrpc.cpp  xmlrpc_client.cpp  xmlrpc_server.cpp
cpp/dev/tools/: amalgamate.py
cpp/examples/: add_two_ints.hpp  add_two_ints_client.cpp  add_two_ints_server.cpp  custom_msg.cpp  fibonacci_action.hpp  fibonacci_client.cpp  fibonacci_server.cpp  image_viewer.cpp  listener.cpp  md5_discovery.cpp  nr_rosbag.cpp  nr_roscore.cpp  nr_rosnode.cpp  nr_rosservice.cpp  nr_rostopic.cpp  params_example.cpp  sensor_reading.hpp  stamped_pub.cpp  stamped_sub.cpp  talker.cpp  udp_listener.cpp  webcam_pub.cpp  webcam_sub.cpp
cpp/include/: irap_noroslib.hpp  noros.hpp
cpp/include/irap_noroslib/actionlib_msgs/: GoalID.h  GoalStatus.h  GoalStatusArray.h
cpp/include/irap_noroslib/diagnostic_msgs/: DiagnosticArray.h  DiagnosticStatus.h  KeyValue.h
cpp/include/irap_noroslib/geometry_msgs/: Accel.h  Point.h  Point32.h  Polygon.h  Pose.h  PoseArray.h  PoseStamped.h  PoseWithCovariance.h  Quaternion.h  Transform.h  TransformStamped.h  Twist.h  TwistStamped.h  TwistWithCovariance.h  Vector3.h  Wrench.h
cpp/include/irap_noroslib/nav_msgs/: GridCells.h  MapMetaData.h  OccupancyGrid.h  Odometry.h  Path.h
cpp/include/irap_noroslib/sensor_msgs/: CameraInfo.h  CompressedImage.h  Image.h  Imu.h  JointState.h  LaserScan.h  MagneticField.h  NavSatFix.h  NavSatStatus.h  PointCloud2.h  PointField.h  Range.h  RegionOfInterest.h  Temperature.h
cpp/include/irap_noroslib/std_msgs/: Bool.h  Byte.h  Char.h  ColorRGBA.h  Duration.h  Empty.h  Float32.h  Float64.h  Header.h  Int16.h  Int32.h  Int64.h  Int8.h  String.h  Time.h  UInt16.h  UInt32.h  UInt64.h  UInt8.h
cpp/include/irap_noroslib/std_srvs/: Empty.h  SetBool.h  Trigger.h
cpp/include/irap_noroslib/trajectory_msgs/: JointTrajectory.h  JointTrajectoryPoint.h  MultiDOFJointTrajectory.h  MultiDOFJointTrajectoryPoint.h
python/: LICENSE  README.md  pyproject.toml  requirements.txt
python/examples/: add_two_ints_client.py  add_two_ints_server.py  custom_msg.py  fibonacci_client.py  fibonacci_server.py  listener.py  md5_discovery.py  nr_roscore.py  params_example.py  ros_image_viewer.py  stamped_pub.py  stamped_sub.py  talker.py  udp_listener.py  webcam_pub.py  webcam_sub.py
python/examples/msgs/: Reading.msg
python/irap_noroslib/: __init__.py  _master.py  _msgspec.py  _tcpros.py  actionlib.py  bag.py  message.py  msg.py  msgfile.py  node.py  rosbag.py  roscore.py  rosnode.py  rosout.py  rosservice.py  rostopic.py  srv.py
python/irap_noroslib/actionlib_msgs/: __init__.py
python/irap_noroslib/actionlib_msgs/msg/: __init__.py
python/irap_noroslib/diagnostic_msgs/: __init__.py
python/irap_noroslib/diagnostic_msgs/msg/: __init__.py
python/irap_noroslib/geometry_msgs/: __init__.py
python/irap_noroslib/geometry_msgs/msg/: __init__.py
python/irap_noroslib/nav_msgs/: __init__.py
python/irap_noroslib/nav_msgs/msg/: __init__.py
python/irap_noroslib/sensor_msgs/: __init__.py
python/irap_noroslib/sensor_msgs/msg/: __init__.py
python/irap_noroslib/std_msgs/: __init__.py
python/irap_noroslib/std_msgs/msg/: __init__.py
python/irap_noroslib/std_srvs/: __init__.py
python/irap_noroslib/std_srvs/srv/: __init__.py
python/irap_noroslib/trajectory_msgs/: __init__.py
python/irap_noroslib/trajectory_msgs/msg/: __init__.py
python/noros/: __init__.py  _msgspec.py  _serialization.py  _tcpros.py  _udpros.py  actionlib.py  message.py  msg.py  node.py  roscore.py  rosout.py  srv.py
python/tests/: test_messages.py
stress/: README.md  noros_sub_custom.py  populate.py  pub_all_cpp.cpp  pub_all_py.py  rospy_pub_custom.py  sub_custom_cpp.cpp  verify_ros.py
stress/msgs/noros_stress_msgs/: CMakeLists.txt  package.xml
stress/msgs/noros_stress_msgs/msg/: CustomData.msg
