[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "irap_noroslib"
version = "0.1.0"
description = "A ROS client library (topics, services, actions, parameters) that speaks the ROS wire protocol with no ROS installed"
readme = "README.md"
requires-python = ">=3.6"
license = { text = "Non-Commercial License" }
authors = [{ name = "iRAP Robot, KMUTNB" }]
keywords = ["ros", "robotics", "tcpros", "udpros", "rospy", "xmlrpc", "pubsub"]
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Free for non-commercial use",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering",
]

[project.scripts]
nr_rostopic = "irap_noroslib.rostopic:main"
nr_rosservice = "irap_noroslib.rosservice:main"
nr_roscore = "irap_noroslib.roscore:main"

[project.urls]
Homepage = "https://github.com/IRAP-Organization/NoROSLib"
Repository = "https://github.com/IRAP-Organization/NoROSLib"

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
include = ["irap_noroslib*"]
